WEB-628 Fix letter spacing for secondary navigation button

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
         font-family: 'Source Sans Pro', sans-serif;
     }
     h1 {
-        @apply text-5xl font-black leading-[1.15];
+        @apply text-5xl font-black leading-[1.15rem];
     }
     h2 {
         @apply text-2xl tb1:text-4xl font-black leading-tight;
@@ -18,7 +18,7 @@
         @apply text-2xl font-bold leading-normal;
     }
     h4 {
-        @apply text-xl font-bold leading-[1.3] tracking-[.15px];
+        @apply text-xl font-bold leading-[1.3rem] tracking-[.15px];
     }
     .subtitle, .link-l {
         @apply text-2xl leading-normal tracking-[.15px];
@@ -27,10 +27,10 @@
         @apply text-xs tracking-[.4px];
     }
     .text-body, .link-m {
-        @apply text-[1.1875rem] leading-[1.75] tracking-[.5px];
+        @apply text-[1.1875rem] leading-[1.75rem] tracking-[.5px];
     }
     .text-body-1, .link-s {
-        @apply text-base leading-[1.75] tracking-[.5px];
+        @apply text-base leading-[1.75rem] tracking-[.5px];
     }
     .link-l, .link-m, .link-s, .link-caption {
         @apply text-primary underline;
@@ -45,25 +45,25 @@
 
 @layer components {
     .accordeon {
-        @apply bg-white border border-neutral-300 rounded-xl 
+        @apply bg-white border border-neutral-300 rounded-xl;
     }
     .accordeon__title {
-        @apply flex items-center justify-between pb-[0.625rem]
+        @apply flex items-center justify-between pb-[0.625rem];
     }
     .accordeon__subtitle {
-        @apply text-body-1
+        @apply text-body-1;
     }
     .accordeon__button {
-        @apply w-full px-5 pb-5 pt-[1.875rem] text-left
+        @apply w-full px-5 pb-5 pt-[1.875rem] text-left;
     }
     .accordeon__icon {
-        @apply w-[1.875rem] h-[1.875rem]
+        @apply w-[1.875rem] h-[1.875rem];
     }
     .accordeon__content {
-        @apply hidden px-5 border-t border-neutral-300 pt-5 pb-10
+        @apply hidden px-5 border-t border-neutral-300 pt-5 pb-10;
     }
     .accordeon__content--open {
-        @apply block
+        @apply block;
     }
 
     .avatar-circle {
@@ -141,28 +141,28 @@
     }
 
     .searchbar__wrapper {
-        @apply relative inline-block
+        @apply relative inline-block;
     }
     .searchbar__button {
-        @apply absolute inset-0 left-auto bg-primary rounded-r-lg text-white flex items-center
+        @apply absolute inset-0 left-auto bg-primary rounded-r-lg text-white flex items-center;
     }
     .searchbar__button--large {
-        @apply  text-2xl px-4  gap-2
+        @apply  text-2xl px-4  gap-2;
     }
     .searchbar__button--medium {
-        @apply  text-xl px-3.5  gap-1.5
+        @apply  text-xl px-3.5  gap-1.5;
     }
     .searchbar__button--small {
-        @apply  text-base px-3  gap-1
+        @apply  text-base px-3  gap-1;
     }
     .searchbar__icon--large {
-        @apply w-8 h-8
+        @apply w-8 h-8;
     }
     .searchbar__icon--medium {
-        @apply w-6 h-6
+        @apply w-6 h-6;
     }
     .searchbar__icon--small {
-        @apply w-4 h-4
+        @apply w-4 h-4;
     }
 
     .input, .searchbar {
@@ -301,7 +301,7 @@
         @apply px-2.5 border rounded-md h-9 tb1:h-10 flex items-center gap-3 text-body text-blue-600 font-bold;
     }
     .menu-button__icon {
-        @apply w-[1.625rem] h-[1.625rem]
+        @apply w-[1.625rem] h-[1.625rem];
     }
 
     .modal-sidebar {
@@ -470,7 +470,7 @@
         @apply caption tb1:text-body-1;
     }
     .secondary-navigation__title-button {
-        @apply hover:underline font-bold inline-flex items-center;
+        @apply hover:underline font-bold tracking-[.5px] inline-flex items-center;
     }
     .secondary-navigation__title-button-icon {
         @apply w-6 h-6;
